apps/dev/home-assistant/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: hass.iot.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:SPNjlxpr8uZp1qwzy2IW1xcEu9W1aTqMYZhg,iv:QRKXuwuCrdjF248WKtjUy8XMUxhEyJ6XJ7ThbXUEYCc=,tag:+WvGfs+1dnjm1OQ6ICZ2Pw==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:eyE2rt6yK8gfIRKs0ySfx9/xzEYp9A==,iv:MEYOLFxo0aeviJVp9PpL8QWyQ40J0vxlJjE1Unre5Tk=,tag:Tz2gdrBN2iNBSz2HJQJb9A==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: home-assistant-proxy-production
    namespace: home-assistant
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:B+PVYu1eTwK9yd6GXA8tnaEWYiUfgY8zpIWpuxiBprpn6aY=,iv:t2RrIkaHaAWiX9ZoaznIECEIfxtb9YAm4JaLGsizHnY=,tag:M+yluk8RHooUHWfPUOOHxw==,type:str]
          middlewares:
            - name: security
              namespace: traefik
          services:
            - kind: TraefikService
              name: home-assistant-proxy
              namespace: home-assistant
    tls:
        domains:
            - main: ENC[AES256_GCM,data:0bVZuWJsq0rpZiEuXeeSv5WBZF87tg==,iv:uN9s1FJunIbJhrvb4MhVSHTkoz/uNaWIQrkoq8WKzXE=,tag:7/y5396SG5Hb15uWfZ04aw==,type:str]
              sans:
                - ENC[AES256_GCM,data:0dUTmocK4IAWZ74qmSC45z4m6W3RWkQ=,iv:JHa9dSQCIRbtyfPJARm6KlwSfpKO1rbMO9JTOI0Dx8A=,tag:V5dl+9RxaNkktN8/HPwpSg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: home-assistant-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLNFEvUjdMYlhzNHZINDNX
[...]
            wVJu3+5Ib6UObCpmtkOUyBe5iXbCOKOjf2wOEtaPwlH4UbvW7Ywi8w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-10T13:37:29Z"
    mac: ENC[AES256_GCM,data:MKvzWJerTqWFXr3N/T0K08sxrc5jJ5iAvnlcS880eanZMq63ksHxH/pNUbRFBlEuojHJGr5cacf2oQ3U8rn+OMkXAVoBhL/PRCSJilt256QxHU9HM7MeUjwJtOMhuXdANZcn2S+rOtcRM3uTpEPnBby7XvN7oy0VzTC+LYJvWgA=,iv:lnleukHQYYxfzoS57ziQwgZ97IEpuHedCu9zS6/zZsk=,tag:XNNc5pugamqJS5xipnGUzg==,type:str]
    pgp:
        - created_at: "2024-10-10T13:37:29Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+MfqzwzdbyvCItIFaSoPRS/31hF6ocFPWNRRFvPjvvjCD
[...]
            =Sr3j
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
